--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -558,3 +558,11 @@ footer p {
     font-size: 1.5rem;
   }
 }
+
+.admin-dashboard {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow-x: hidden;
+  background-color: #f9f9f9;
+}
